test/langtools/tools/javac/patterns/T8329115.out
T8329115.java:14:17: compiler.err.return.outside.switch.expression
T8329115.java:12:16: compiler.err.switch.expression.no.result.expressions
2 errors
